app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
/* ... */
.abs-field-size-small {
    width: @field-size__s;
}

.abs-field-size-medium {
    width: @field-size__m;
}

.abs-field-size-large {
    width: @field-size__l;
}

.abs-field-sizes {
    &.admin__field-x-small {
        > .admin__field-control {
            &:extend(.abs-field-size-x-small all);
        }
    }

    &.admin__field-small {
        > .admin__field-control {
            &:extend(.abs-field-size-small all);
        }
    }

    &.admin__field-medium {
        > .admin__field-control {
            &:extend(.abs-field-size-medium all);
        }
    }

    &.admin__field-large {
        > .admin__field-control {
            &:extend(.abs-field-size-large all);
        }
    }
}

.abs-field-no-label {
    /**
     *@codingStandardsIgnoreStart
     */
    #mix-grid .return_length(@field-label-grid__column, @field-grid__columns, '+');
    //@codingStandardsIgnoreEnd
    margin-left: @_length;
}

//
//  Form Fields
//  _____________________________________________

//
//  Fieldset
//  ---------------------------------------------

.admin__fieldset {
    border: 0;
    margin: 0;
    min-width: 0;
    padding: 0;

    //  Filedset section
    .fieldset-wrapper {
        &.admin__fieldset-section {
            > .fieldset-wrapper-title {
                padding-left: @indent__s;

                strong {
                    font-size: @collapsible-title__font-size;
                    font-weight: @font-weight__semibold;
                }
            }

            .admin__fieldset-wrapper-content {
                > .admin__fieldset {
                    padding-top: @indent__s;
                }
            }

            &:last-child {
                .admin__fieldset-wrapper-content {
                    > .admin__fieldset {
                        padding-bottom: 0;
                    }
                }
            }
        }
    }

    > .admin__field {
        border: 0;
        margin: 0;
        padding: 0;
        #mix-grid .row();

        &.admin__field-wide {
            &:extend(.abs-field-rows all);
        }

        > .admin__field-control {
            #mix-grid .column(@field-control-grid__column, @field-grid__columns);
            .admin__field {
                margin-top: 8px;
            }
        }

        > .admin__field-label {
            #mix-grid .column(@field-label-grid__column, @field-grid__columns);
        }

        &:extend(.abs-field-sizes all);

        &.admin__field-no-label {
            > .admin__field-label {
                display: none;
            }

            > .admin__field-control {
                &:extend(.abs-field-no-label all);
            }
        }

        //  Field with empty table and no thead
        + .admin__field {
            &._empty {
                &._no-header {
                    margin-top: -@indent__l;
                }
            }
        }
    }
}

.admin__fieldset-product-websites {
    position: relative;
    z-index: @z-index-3;
}

.admin__fieldset-note {
    margin-bottom: @indent__base;
}

.admin__form-field {
    border: 0;
    margin: 0;
    padding: 0;
}

.admin__form-field-control,
.admin__field-control {
    .admin__control-text,
    .admin__control-textarea {
        width: 100%;
        &.disabled {
            background-color: #e9e9e9;
            border-color: #adadad;
            color: #303030;
            cursor: not-allowed;
            opacity: .5;
        }
    }
}

.admin__field-no-label {
    &:extend(.abs-field-no-label all);
}

.admin__field-row {
    &:extend(.abs-field-rows all);
}

//
//  Label
//  ---------------------------------------------

.admin__field-label {
    color: @field-label__color;
    margin: 0;
    text-align: right;

    label {
        cursor: pointer;
    }

    + br {
        display: none;
    }

    .admin__field:not(.admin__field-option) > & {
        &:extend(.abs-word-wrap all);
        font-family: @font-family__base;
        font-size: @field-label__font-size;
        font-weight: @font-weight__semibold;
        line-height: 3.2rem;
        padding: 0;
        white-space: nowrap;

        &:before {
            .appearing__off();
            content: '.';
            margin-left: -7px;
            overflow: hidden;
        }

        span {
            display: inline-block;
            line-height: @field-label__line-height;
            vertical-align: middle;
            white-space: normal;

            &[data-config-scope] {
                position: relative;

                &:before {
                    &:extend(.abs-config-scope-label all);
                }
            }
        }
    }

    .required > &, // ToDo UI: change classes 'required' to '_required'.
    ._required > & {
        span {
            &:after {
                color: @validation__color;
                content: '*';
                display: inline-block;
                font-size: @font-size__l;
                font-weight: @font-weight__heavier;
                line-height: 1;
                margin-left: 10px;
                margin-top: .2rem;
                position: absolute;
                z-index: 1;
            }
        }
    }

    ._disabled > & {
        color: @field-label__disabled__color;
        cursor: default;
    }
}
/* ... */

